chenge README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - DB_DATABASE=bitnami_myapp
     volumes:
       - '.backend/checkpreco:/app'
+    command: php a
     networks:
       - app-tier
     depends_on:
