--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
+      #- MARIADB_ROOT_PASSWORD=example
       - MARIADB_USER=bn_myapp
       - MARIADB_DATABASE=bitnami_myapp
     healthcheck:
