--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -1,27 +1,50 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "projeto",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev -p 80",
-    "build": "next build -p 80",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.0"
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/lab": "^5.0.0-alpha.160",
+    "@mui/material": "^5.15.4",
+    "axios": "^1.6.7",
+    "date-fns": "^3.2.0",
+    "jwt-decode": "^4.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "paginate-info": "^1.0.4",
+    "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.21.1",
+    "sort-by": "^1.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "@types/react": "^18.2.43",
+    "@types/react-datepicker": "^4.19.5",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-modal": "^3.16.3",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
